--- a/BaiTap1:#Bot/18520811.ipynb
+++ b/BaiTap1:#Bot/18520811.ipynb
@@ -1,12 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#`Tóm tắt`\n",
+    "\n",
+    "Dãy con có tổng lớn nhất\n",
+    "\n",
+    "#`Nhận dạng`\n",
+    "\n",
+    "\n",
+    "\n",
+    "#`Thiết kế`\n",
+    "\n",
+    "```\n",
+    "res_data = {\n",
+    "    'from': 1,\n",
+    "    'to': len(data),\n",
+    "    'sum': sum(data)\n",
+    "}\n",
+    "\n",
+    "from_Var = 0\n",
+    "\n",
+    "while array_len > from_Var:\n",
+    "    for i = from_var to array_len:\n",
+    "        if range_sum > res_data['sum']:\n",
+    "            res_data['from'] = from_var + 1\n",
+    "            res_data['to'] = i\n",
+    "            res_data['sum'] = range_sum\n",
+    "        from_var += 1\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
+    "# import re\n",
     "\n",
     "def read_data():\n",
     "    with open('input.txt', 'r') as file:\n",
