[ refactor ] update jupyter

--- a/BaiTap1:#Bot/18520811_18520766_18520915.ipynb
+++ b/BaiTap1:#Bot/18520811_18520766_18520915.ipynb
@@ -6,13 +6,16 @@
    "source": [
     "#`Tóm tắt`\n",
     "\n",
-    "Dãy con có tổng lớn nhất\n",
+    "Tìm dãy con liên tiếp có tổng lớn nhất\n",
     "\n",
     "#`Nhận dạng`\n",
     "\n",
+    "* em hông biết chắc là quy hoạch động :(\n",
     "\n",
+    "#`Thiết kế thuật toán`\n",
     "\n",
-    "#`Thiết kế`\n",
+    "* input: một dãy n các số có âm có dương (1 <= n <= 10^6)\n",
+    "* output: tìm dãy con có tổng lớn nhất\n",
     "\n",
     "```\n",
     "res_data = {\n",
@@ -23,8 +26,8 @@
     "\n",
     "from_Var = 0\n",
     "\n",
-    "while array_len > from_Var:\n",
-    "    for i = from_var to array_len:\n",
+    "lặp cho đến khi array_len lớn hơn from_var:\n",
+    "    for i = from_var đến array_len:\n",
     "        if range_sum > res_data['sum']:\n",
     "            res_data['from'] = from_var + 1\n",
     "            res_data['to'] = i\n",
