--- a/BaiTap1:#Bot/18520811_18520766_18520915.ipynb
+++ b/BaiTap1:#Bot/18520811_18520766_18520915.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "#`Tóm tắt`\n",
     "\n",
-    "Tìm dãy con liên tiếp có tổng lớn nhất\n",
+    "* Tìm dãy con liên tiếp có tổng lớn nhất\n",
     "\n",
     "#`Nhận dạng`\n",
     "\n",
-    "* em hông biết chắc là quy hoạch động :(\n",
+    "* quy hoạch động\n",
     "\n",
     "#`Thiết kế thuật toán`\n",
     "\n",
@@ -38,26 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import re\n",
+    "import re\n",
     "\n",
     "def read_data():\n",
     "    with open('input.txt', 'r') as file:\n",
     "        lines = file.readlines()\n",
     "\n",
+    "    n = int(lines[0])\n",
     "    data_list = re.split('\\s', lines[1])\n",
     "    filtered_list = list(filter(lambda y: y != '', data_list))\n",
     "    res = list(map(lambda y: int(y), filtered_list))\n",
     "    \n",
-    "    return res"
+    "    return res, n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
    ],
    "source": [
     "from_var = 0\n",
-    "data = read_data()\n",
+    "data, size = read_data()\n",
     "\n",
     "res_data = {\n",
     "    'from': 1,\n",
@@ -86,6 +87,55 @@
     "            res_data['to'] = i\n",
     "            res_data['sum'] = range_sum\n",
     "    from_var += 1\n",
+    "\n",
+    "print(res_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#PHƯƠNG ÁN 2:\n",
+    "\n",
+    "nguồn tham khảo: https://www.geeksforgeeks.org/largest-sum-contiguous-subarray/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'from': 5, 'to': 14, 'sum': 12}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data, size = read_data()\n",
+    "res_data = {\n",
+    "    'from': 1,\n",
+    "    'to': len(data),\n",
+    "    'sum': sum(data)\n",
+    "}\n",
+    "\n",
+    "max_so_far = -1\n",
+    "max_ending_here = 0\n",
+    "index = 0\n",
+    "       \n",
+    "for i in range(0, size): \n",
+    "    max_ending_here += data[i] \n",
+    "    if (max_so_far < max_ending_here):\n",
+    "        max_so_far = max_ending_here \n",
+    "        res_data['sum'] = max_so_far\n",
+    "        res_data['from'] = index + 1\n",
+    "        res_data['to'] = i + 1\n",
+    "  \n",
+    "    if max_ending_here < 0: \n",
+    "        max_ending_here = 0\n",
+    "        index = i + 1\n",
     "\n",
     "print(res_data)"
    ]
