--- a/BaiTap2/SeaWeed.ipynb
+++ b/BaiTap2/SeaWeed.ipynb
@@ -19,11 +19,11 @@
     "\n",
     "- Thuật toán\n",
     "    * Lặp biến i từ 0 đến 2k + 1\n",
-    "      sum1 = n1 + n2\n",
-    "      n1 = n2\n",
-    "      n2 = sum1\n",
-    "      n3 = n3 + 1  \n",
-    "      Khi lặp xong, trả về n1\n",
+    "      - sum1 = n1 + n2\n",
+    "      - n1 = n2\n",
+    "      - n2 = sum1\n",
+    "      - n3 = n3 + 1  \n",
+    "      - Khi lặp xong, trả về n1\n",
     "\n",
     "\n"
    ]
