--- a/BaiTap2/CountingStars.ipynb
+++ b/BaiTap2/CountingStars.ipynb
@@ -28,37 +28,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "1/4 2/1\n",
+      "3 1\n",
+      "6 2\n",
+      "9 3\n",
+      "12 4\n",
+      "15 5\n",
+      "2 1\n",
+      "4 2\n",
+      "5 3\n",
+      "7 4\n",
+      "1 3\n",
+      "3 4\n",
+      "2 5\n",
+      "4 5\n",
+      "1 6\n",
+      "6 6\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
-    "global maximum \n",
+    "def lis(arr, n):\n",
+    "    temp_list = [1 for x in range(0,n)]\n",
+    "    i,j = 1,0\n",
+    "    while i<len(arr) and j<len(arr):\n",
+    "        if arr[j][1]<arr[i][1]:\n",
+    "            if temp_list[j]+1>temp_list[i]:\n",
+    "                temp_list[i] = temp_list[j]+1\n",
+    "        j=j+1\n",
+    "        if j==i:\n",
+    "            j,i=0,i+1\n",
+    "    return max(temp_list)\n",
     "\n",
-    "def _lis(arr , n ): \n",
-    "    global maximum \n",
-    "    if n == 1 : \n",
-    "        return 1\n",
-    "    maxEndingHere = 1\n",
-    "    for i in range(1, n): \n",
-    "        res = _lis(arr , i) \n",
-    "        if arr[i-1][1] < arr[n-1][1] and res+1 > maxEndingHere: \n",
-    "            maxEndingHere = res +1\n",
-    "    maximum = max(maximum , maxEndingHere) \n",
+    "def line_function(x, y, angle):\n",
+    "    return y - math.tan(angle)*x\n",
     "\n",
-    "    return maxEndingHere \n",
-    "\n",
-    "def lis(arr):\n",
-    "    global maximum \n",
-    "\n",
-    "    n = len(arr) \n",
-    "\n",
-    "    maximum = 1\n",
-    "\n",
-    "    _lis(arr , n) \n",
-    "\n",
-    "    return maximum\n",
+    "def translating(x, y, angle):\n",
+    "    k = y/math.tan(angle) - x\n",
+    "    return math.tan(angle)*k\n",
     "\n",
     "m = int(input())\n",
     "x, y = (input().split())\n",
@@ -66,20 +84,27 @@
     "alpha2 = math.atan(eval(y))\n",
     "alpha3 = alpha2 - alpha1\n",
     "coordinates = [] \n",
-    "for i in range(m):\n",
+    "for i in range(0,m):\n",
     "    x, y = (input().split())\n",
-    "    coordinates.append((int(x),int(y)))\n",
+    "    if line_function(float(x), float(y), alpha1) < 0:\n",
+    "        continue\n",
+    "    if line_function(float(x), float(y), alpha2) > 0:\n",
+    "        continue\n",
+    "    y_ = translating(float(x), float(y), alpha2 - alpha1)\n",
+    "    coordinates.append((float(x), float(y), y_))\n",
     "\n",
-    "#làm gì cái gì đó siêu to khổng lồ ở đây\n",
-    "coordinates.sort(key=lambda tup: tup[1])\n",
-    "final = lis(coordinates)\n",
+    "coordinates.sort(key=lambda tup: tup[2], reverse=True)\n",
+    "final = lis(coordinates, m)\n",
     "\n",
-    "# print(final)\n",
-    "\n",
-    "# print(coordinates)\n",
-    "# print(alpha1, alpha2)\n",
-    "# print(m)"
+    "print(final)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -98,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
