--- a/BaiTap3/WaterSupply.ipynb
+++ b/BaiTap3/WaterSupply.ipynb
@@ -5,31 +5,39 @@
    "metadata": {},
    "source": [
     "# Tóm tắt\n",
-    "\n",
+    "```\n",
     "Tìm số ống CẦN để các nhà vẫn được kết nối\n",
     "Tìm số tổ hợp có thể có\n",
+    "```\n",
     "\n",
     "# Nhận dạng\n",
+    "```\n",
     "\n",
     "đồ thị + chỉnh hợp tổ hợp\n",
+    "```\n",
     "\n",
     "# Thiết kế thuật toán\n",
     "\n",
     "giả sử ta có một dãy các nhà:\n",
+    "```\n",
     "3 4 1\n",
     "2 5\n",
     "6 7\n",
+    "```\n",
     "mỗi dòng là mỗi dãy nhà có được kết nối với nhau vậy ở trên ta có 3 dãy nhà vẫn được kết nối với nhau vậy đường ống *CẦN* để lắp vào những nơi thiếu là 3\n",
     "\n",
     "câu hỏi thứ hai là tính chỉnh hợp tổ hợp để lắp ráp đường ống cho thông mỗi dòng vậy ta có:\n",
+    "```\n",
     "dãy 1 có 3 cách chọn\n",
     "dãy 2 có 2 cách chọn\n",
     "dãy 3 có 2 cách chọn\n",
-    "vậy theo nguyên tắc tổ hợp thì số cách lắp sẽ bằng 3*2*2*(3C2)\n",
-    "\n",
+    "```\n",
+    "vậy theo nguyên tắc tổ hợp thì số cách lắp sẽ bằng `3*2*2*(3C2)`\n",
+    "```\n",
     "> 1 tạo ma trận đối ngẫu biểu diễn đồ thị\n",
     "> cho ma trận đi qua thuật toán để tìm ra các cặp nhà được kết nối nhau\n",
-    "> theo công thức mà tính"
+    "> theo công thức mà tính\n",
+    "```"
    ]
   },
   {
