--- a/BaiTap3/H_index.ipynb
+++ b/BaiTap3/H_index.ipynb
@@ -5,12 +5,23 @@
    "metadata": {},
    "source": [
     "# Tóm tắt\n",
+    "- Tìm số k sao cho có k phần tử trong dãy lớn hơn hoặc bằng k\n",
+    "- Ràng buộc:\n",
+    "    * $n$ ($1 \\le n \\le 5*10^5$),\n",
+    "    * $c_1, c_2, . . ., c_n (0 \\le c_i \\le 10^6, i = 1 ÷ $n$)$.\n",
     "\n",
     "\n",
     "# Nhận dạng\n",
+    "- Bài toán quy hoạch động\n",
     "\n",
     "\n",
-    "# Thiết kế thuật toán"
+    "# Thiết kế thuật toán\n",
+    "- Gọi dãy $A$ là dãy gồm các phần tử chỉ số lượng trích dẫn của bài báo và thực hiện sắp xếp giảm dần \n",
+    "- Sau đó bắt đầu duyệt từ phần tử $A_0$.\n",
+    "     * Tại mỗi vị trí thứ $i$ ta so sánh xem số lượng phần tử còn lại nhỏ hơn vị trí có giá trị phần tử tại vị trí thứ $i$ hay không. => Nếu có thì đó chính là $k$. \n",
+    "- Độ phức tạp của giải thuật này là: $O(n \\log n)$\n",
+    "\n",
+    "# Code"
    ]
   },
   {
@@ -66,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
