[update] WaterSupply.ipynb

--- a/BaiTap3/H_index.ipynb
+++ b/BaiTap3/H_index.ipynb
@@ -5,15 +5,20 @@
    "metadata": {},
    "source": [
     "# Tóm tắt\n",
-    "- Tìm số k sao cho có k phần tử trong dãy lớn hơn hoặc bằng k\n",
+    "``` \n",
+    "Tìm số k sao cho có k phần tử trong dãy lớn hơn hoặc bằng k\n",
+    "\n",
+    "```\n",
     "- Ràng buộc:\n",
     "    * $n$ ($1 \\le n \\le 5*10^5$),\n",
     "    * $c_1, c_2, . . ., c_n (0 \\le c_i \\le 10^6, i = 1 ÷ $n$)$.\n",
     "\n",
     "\n",
     "# Nhận dạng\n",
-    "- Sắp xếp \n",
+    "```\n",
+    "Sắp xếp\n",
     "\n",
+    "```\n",
     "\n",
     "# Thiết kế thuật toán\n",
     "- Gọi dãy $A$ là dãy gồm các phần tử chỉ số lượng trích dẫn của bài báo và thực hiện sắp xếp giảm dần \n",
