--- a/BaiTap3/WaterSupply.ipynb
+++ b/BaiTap3/WaterSupply.ipynb
@@ -6,38 +6,50 @@
    "source": [
     "# Tóm tắt\n",
     "```\n",
-    "Tìm số ống CẦN để các nhà vẫn được kết nối\n",
-    "Tìm số tổ hợp có thể có\n",
+    "Tìm số ống nước cần thiết để các nhà vẫn được kết nối và tổng những trường hợp tối ưu đó\n",
     "```\n",
     "\n",
     "# Nhận dạng\n",
     "```\n",
     "\n",
-    "đồ thị + chỉnh hợp tổ hợp\n",
+    "Đồ thị + tìm đường ngắn nhất\n",
     "```\n",
     "\n",
     "# Thiết kế thuật toán\n",
     "\n",
-    "giả sử ta có một dãy các nhà:\n",
+    "Giả sử ta có 7 nhà và sơ đồ đường ống nước chưa hư:\n",
     "```\n",
-    "3 4 1\n",
-    "2 5\n",
-    "6 7\n",
-    "```\n",
-    "mỗi dòng là mỗi dãy nhà có được kết nối với nhau vậy ở trên ta có 3 dãy nhà vẫn được kết nối với nhau vậy đường ống *CẦN* để lắp vào những nơi thiếu là 3\n",
+    "    3 === 4 === 1\n",
     "\n",
-    "câu hỏi thứ hai là tính chỉnh hợp tổ hợp để lắp ráp đường ống cho thông mỗi dòng vậy ta có:\n",
+    "    2 === 5\n",
+    "\n",
+    "    6 === 7\n",
     "```\n",
-    "dãy 1 có 3 cách chọn\n",
-    "dãy 2 có 2 cách chọn\n",
-    "dãy 3 có 2 cách chọn\n",
+    "\n",
+    "- Q1: Cần ít nhất bao nhiêu đường ống nước để nối các nhà?\n",
+    "    * Mỗi dòng là mỗi dãy nhà có đường ống nước kết nối với nhau. Ta thấy sơ đồ dường như chia 7 nhà thành 3 nhóm nhà riêng biệt. Nhiệm vụ bây giờ là kết nối những nhóm nhà riêng biệt ở trên. Vậy để để 7 nhà vẫn được kết nối với nhau => cần tối thiểu 2 đường ống nước\n",
+    " \n",
+    "- Q2: Có bao nhiêu trường hợp để lắp đặt những đường ống đó?\n",
+    "    * Vì các đường ống nối trực tiếp vào các nhà, nên ta chọn từng nhà trong từng các nhóm để xét. Vậy ta có xét tổ hợp các nhà trong từng nhóm như sau:\n",
+    "\n",
+    "     * Nhóm 1 có $C_1$ = 3 cách chọn(nhà)\n",
+    "     * Nhóm 2 có $C_2$ = 2 cách chọn(nhà)         => theo nguyên tắc tổ hợp thì số cách lắp sẽ bằng `3*2*2`\n",
+    "     * Nhóm 3 có $C_3$ = 2 cách chọn(nhà)\n",
+    "\n",
+    "Tổng quát hơn ta sẽ có công thức $T$ = ($N$ ^ ($M$ - $1$)) $*$ ($C_1 * C_2 * ... * C_N$), với:\n",
+    "- $T$ là số trường hợp\n",
+    "- $N$ là số lượng nhà\n",
+    "- $M$ là số lượng ống nước cần ít nhất\n",
+    "- $C$ là cách số cách chọn trong từng nhóm nhà\n",
+    "\n",
+    "``` \n",
+    "Phương pháp\n",
+    "> B1: 1 tạo ma trận đối ngẫu biểu diễn đồ thị\n",
+    "> B2: cho ma trận đi qua thuật toán để tìm ra các cặp nhà được kết nối nhau\n",
+    "> B3: theo công thức mà tính số trường hợp\n",
     "```\n",
-    "vậy theo nguyên tắc tổ hợp thì số cách lắp sẽ bằng `3*2*2*(3C2)`\n",
-    "```\n",
-    "> 1 tạo ma trận đối ngẫu biểu diễn đồ thị\n",
-    "> cho ma trận đi qua thuật toán để tìm ra các cặp nhà được kết nối nhau\n",
-    "> theo công thức mà tính\n",
-    "```"
+    "\n",
+    "# Code"
    ]
   },
   {
@@ -57,44 +69,57 @@
     }
    ],
    "source": [
-    "def bfs(the_list, start):\n",
-    "    queue = []\n",
-    "    retrn = []\n",
-    "    queue.append(start)\n",
-    "    top = None\n",
-    "    while len(queue) != 0:\n",
-    "        top = queue.pop(0)\n",
-    "        retrn.append(top)\n",
-    "        queue.extend([i for i, ob in enumerate(the_list[top]) if ob == 1 and i not in retrn])\n",
+    "n, m = map(int, input().split())\n",
+    "edges = {}\n",
+    "for _ in range(m):\n",
+    "    u, v = map(int, input().split())\n",
+    "    try:\n",
+    "        edges[u].append(v)\n",
+    "    except:\n",
+    "        edges[u] = [v]\n",
+    "    try:\n",
+    "        edges[v].append(u)\n",
+    "    except:\n",
+    "        edges[v] = [u]\n",
+    "      \n",
+    "      \n",
+    "visited = set()\n",
     "\n",
-    "    return retrn\n",
+    "def bfs(u):\n",
+    "    index = 0\n",
+    "    queue = [u]\n",
+    "    visited.add(u)  \n",
+    "    \n",
+    "    while index < len(queue):\n",
+    "        u = queue[index]\n",
+    "        index += 1\n",
+    "        if u not in edges:\n",
+    "            continue\n",
+    "        for v in edges[u]:\n",
+    "            if v not in visited:\n",
+    "                visited.add(v)\n",
+    "                queue.append(v)\n",
+    "        \n",
+    "    return len(queue)\n",
+    "    \n",
+    "ans = []\n",
+    "for i in range(1,n+1):\n",
+    "    if i not in visited:\n",
+    "        ans.append(bfs(i))\n",
+    "print(len(ans) - 1)\n",
+    "anw = 0\n",
     "\n",
-    "\n",
-    "n, m = list(map(int, input().split()))\n",
-    "\n",
-    "house_ho = [[0]*n for i in [0]*n]\n",
-    "close = []\n",
-    "sum_result = 0\n",
-    "mult_result = 1\n",
-    "\n",
-    "for i in range(0, m):\n",
-    "    x, y = list(map(int, input().split()))\n",
-    "    if house_ho[x][y] == 1 or house_ho[y][x] == 1:\n",
-    "        continue\n",
-    "    house_ho[x][y] = 1\n",
-    "    house_ho[y][x] = 1\n",
-    "\n",
-    "for i in range(0, n):\n",
-    "    if i in close:\n",
-    "        continue\n",
-    "    close_extend = bfs(house_ho, i)\n",
-    "    close.extend(close_extend)\n",
-    "    sum_result += 1\n",
-    "    mult_result *= len(close_extend)\n",
-    "\n",
-    "print(sum_result - 1)\n",
-    "print(mult_result)\n",
-    "#Tính sai rồi mà lười làm tiếp quá quá Hồ hay Hoà làm tiếp giùm tao"
+    "if len(ans) > 1:\n",
+    "    base = int(1e9 + 7)\n",
+    "    anw = 1\n",
+    "    anw2 = 1\n",
+    "    for _ in range(len(ans) - 2):\n",
+    "        anw2 = (anw2*n) % base\n",
+    "    for x in ans:\n",
+    "        anw = (anw * x) % base\n",
+    "    anw = anw * anw2 % base\n",
+    "    \n",
+    "print(anw)"
    ]
   },
   {
