--- a/BaiTap3/WaterSupply.ipynb
+++ b/BaiTap3/WaterSupply.ipynb
@@ -5,19 +5,16 @@
    "metadata": {},
    "source": [
     "# Tóm tắt\n",
-    "```\n",
-    "Tìm số ống nước cần thiết để các nhà vẫn được kết nối và tổng những trường hợp tối ưu đó\n",
-    "```\n",
+    "\n",
+    "- Tìm số ống nước CẦN để các nhà vẫn được kết nối và tổng những trường hợp tối ưu đó\n",
     "\n",
     "# Nhận dạng\n",
-    "```\n",
     "\n",
-    "Đồ thị + tìm đường ngắn nhất\n",
-    "```\n",
+    "- Đồ thị + toán hoán vị tổ hợp\n",
     "\n",
     "# Thiết kế thuật toán\n",
     "\n",
-    "Giả sử ta có 7 nhà và sơ đồ đường ống nước chưa hư:\n",
+    "- Giả sử ta có 7 nhà và sơ đồ đường ống nước chưa hư:\n",
     "```\n",
     "    3 === 4 === 1\n",
     "\n",
@@ -36,16 +33,18 @@
     "     * Nhóm 2 có $C_2$ = 2 cách chọn(nhà)         => theo nguyên tắc tổ hợp thì số cách lắp sẽ bằng `3*2*2`\n",
     "     * Nhóm 3 có $C_3$ = 2 cách chọn(nhà)\n",
     "\n",
+    "    * giả sử như ta có 5 nhà với 3 đường ống thì ta có thể gắn cứng 1 đường ống và hoán vị của hai đường ống còn lại và vì một nhà có thể gắn tới n đường ống nên ta có công thức $N$ ^ ($M$ - $1$)\n",
+    "\n",
     "Tổng quát hơn ta sẽ có công thức $T$ = ($N$ ^ ($M$ - $1$)) $*$ ($C_1 * C_2 * ... * C_N$), với:\n",
     "- $T$ là số trường hợp\n",
     "- $N$ là số lượng nhà\n",
     "- $M$ là số lượng ống nước cần ít nhất\n",
     "- $C$ là cách số cách chọn trong từng nhóm nhà\n",
     "\n",
+    "Hiện thực thuật toán:\n",
     "``` \n",
-    "Phương pháp\n",
-    "> B1: 1 tạo ma trận đối ngẫu biểu diễn đồ thị\n",
-    "> B2: cho ma trận đi qua thuật toán để tìm ra các cặp nhà được kết nối nhau\n",
+    "> B1: 1 tạo ma trận đối ngẫu ( hoặc một cái gì đó không phải ma trận nhưng vẫn khuyến khích dùng ma trận hơn nếu muốn code ít hơn ) để biểu diễn đồ thị\n",
+    "> B2: cho ma trận đi qua thuật toán bfs/dfs ( hay cái gì đó ) để tìm ra các đỉnh được kết nối nhau\n",
     "> B3: theo công thức mà tính số trường hợp\n",
     "```\n",
     "\n",
@@ -146,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
