--- a/BaiTap3/WaterSupply.ipynb
+++ b/BaiTap3/WaterSupply.ipynb
@@ -30,20 +30,20 @@
     "    * Vì các đường ống nối trực tiếp vào các nhà, nên ta chọn từng nhà trong từng các nhóm để xét. Vậy ta có xét tổ hợp các nhà trong từng nhóm như sau:\n",
     "\n",
     "     * Nhóm 1 có $C_1$ = 3 cách chọn(nhà)\n",
-    "     * Nhóm 2 có $C_2$ = 2 cách chọn(nhà)         => theo nguyên tắc tổ hợp thì số cách lắp sẽ bằng `3*2*2`\n",
+    "     * Nhóm 2 có $C_2$ = 2 cách chọn(nhà)         => theo nguyên tắc tổ hợp thì số cách lắp sẽ bằng `3x2x2`\n",
     "     * Nhóm 3 có $C_3$ = 2 cách chọn(nhà)\n",
     "\n",
-    "    * giả sử như ta có 5 nhà với 3 đường ống thì ta có thể gắn cứng 1 đường ống và hoán vị của hai đường ống còn lại và vì một nhà có thể gắn tới n đường ống nên ta có công thức $N$ ^ ($M$ - $1$)\n",
+    "    * Với 7 nhà với 2 đường ống thì ta có thể cố định một đường ống và hoán vị đường ống còn lại. Vì một nhà có thể liên kết tới n đường ống nên ta có $7$ ^ $($2$-$1$)$. Vậy với trường hợp trên, ta có thể tính ra số trường hợp là [ $7$ ^ $($2$-$1$)$] $x$ 3 $x$ 2 $x$ 2 = `84` trường hợp\n",
     "\n",
-    "Tổng quát hơn ta sẽ có công thức $T$ = ($N$ ^ ($M$ - $1$)) $*$ ($C_1 * C_2 * ... * C_N$), với:\n",
-    "- $T$ là số trường hợp\n",
-    "- $N$ là số lượng nhà\n",
-    "- $M$ là số lượng ống nước cần ít nhất\n",
-    "- $C$ là cách số cách chọn trong từng nhóm nhà\n",
+    "Tổng quát hơn ta sẽ có công thức $T$ = [ $N$ ^ ($M$ - $1$) ] $*$ ($C_1 * C_2 * $ ... $ * C_N$), với:\n",
+    "- $T$ là số trường hợp.\n",
+    "- $N$ là số lượng nhà.\n",
+    "- $M$ là số lượng ống nước cần ít nhất.\n",
+    "- $C$ là cách số cách chọn trong từng nhóm nhà.\n",
     "\n",
     "Hiện thực thuật toán:\n",
     "``` \n",
-    "> B1: 1 tạo ma trận đối ngẫu ( hoặc một cái gì đó không phải ma trận nhưng vẫn khuyến khích dùng ma trận hơn nếu muốn code ít hơn ) để biểu diễn đồ thị\n",
+    "> B1: 1 tạo ma trận đối ngẫu ( hoặc một cái gì đó không phải ma trận nhưng vẫn khuyến khích dùng ma trận nếu muốn code ít hơn ) để biểu diễn đồ thị.\n",
     "> B2: cho ma trận đi qua thuật toán bfs/dfs ( hay cái gì đó ) để tìm ra các đỉnh được kết nối nhau\n",
     "> B3: theo công thức mà tính số trường hợp\n",
     "```\n",
@@ -145,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
