[ update ] notebook script

--- a/BaiTap3/WaterSupply.ipynb
+++ b/BaiTap3/WaterSupply.ipynb
@@ -41,14 +41,14 @@
     "- $M$ là số lượng ống nước cần ít nhất.\n",
     "- $C$ là cách số cách chọn trong từng nhóm nhà.\n",
     "\n",
+    "[ update 30/9 ] hoặc chúng ta quên đi những cái ở trên và đọc cái này https://vi.wikipedia.org/wiki/C%C3%A2y_bao_tr%C3%B9m\n",
+    "\n",
     "Hiện thực thuật toán:\n",
-    "``` \n",
-    "> B1: 1 tạo ma trận đối ngẫu ( hoặc một cái gì đó không phải ma trận nhưng vẫn khuyến khích dùng ma trận nếu muốn code ít hơn ) để biểu diễn đồ thị.\n",
+    "```\n",
+    "> B1: biểu diễn đồ thị.\n",
     "> B2: cho ma trận đi qua thuật toán bfs/dfs ( hay cái gì đó ) để tìm ra các đỉnh được kết nối nhau\n",
     "> B3: theo công thức mà tính số trường hợp\n",
-    "```\n",
-    "\n",
-    "# Code"
+    "```"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
