[ update ] Renew.ipynb

--- a/BaiTap4/Renew.ipynb
+++ b/BaiTap4/Renew.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "Tương tự với đội $II$, ta có số cây đốn hạ được là $(x-\\frac{x}{m}) \\times b$ \n",
     "\n",
-    "Vậy yêu cầu của bài toán là tìm số ngày $S(x)$ với $S(x) = $($x-\\frac{x}{k}$) $\\times a$$ $ + $ $($x-\\frac{x}{m}$) $\\times b$.\n",
+    "Vậy yêu cầu của bài toán là tìm số ngày $S(x)$ với $S(x) = $($x-\\frac{x}{k}$) $\\times a$ + ($x-\\frac{x}{m}$) $\\times b$.\n",
     "\n",
     "\n",
     "\n",
