--- a/BaiTap5/Lock&Lock.ipynb
+++ b/BaiTap5/Lock&Lock.ipynb
@@ -20,11 +20,11 @@
     "\n",
     "**_Trường hợp 1:_** tổng các số trong dãy đều chia hết cho 3.\n",
     "\n",
-    "Ví dụ ta có dãy số `21080412`. \n",
+    "Ví dụ ta có dãy số `21080412`\n",
     "- Lần lượt tách và thực hiện cộng các số hạng trong dãy (sum). Ở đây ta có thể tính $ 2+1+0+8+0+4+1+2=18 $ chia hết cho 3. \n",
     "- Sắp xếp dãy số này từ lớn đến bé (giảm dần). \n",
     "\n",
-    "=> Kết quả `84221100`.\n",
+    "=> Kết quả `84221100`\n",
     "\n",
     "**_Trường hợp 2:_** tổng các số trong dãy không chia hết cho 3.\n",
     "\n",
@@ -32,14 +32,14 @@
     "- Tồn tại 1 chữ số trong dãy số sao cho chữ số đó chia cho 3 dư 1 hoặc dư 2.\n",
     "- Tồn tại 2 chữ số trong dãy số sao cho tổng 2 chữ đó đó chia cho 3 dư 1 hoặc dư 2.\n",
     "\n",
-    "Ở cả 2 trường hợp ta đều phải tìm và loại bỏ các chữ số đó ra dãy.\n",
+    "Ở cả 2 trường hợp ta đều phải tìm và loại bỏ các chữ số đó ra khỏi dãy.\n",
     "\n",
-    "Ví dụ ta có dãy số `210804122`. \n",
+    "Ví dụ ta có dãy số `210804122`\n",
     "- Lần lượt tách và thực hiện cộng các số hạng trong dãy (sum). Ở đây ta có thể tính $ 2+1+0+8+0+4+1+2+2=20 $ chia cho 3 dư 2. \n",
-    "- Tìm vị trí của các chữ số và loại bỏ. Ở đây ta thấy 2 chữ số 1 là 2 chữ số bé nhất để loại ra và thỏa dãy còn lại chia hết cho 3.\n",
+    "- Tìm vị trí của các chữ số và loại bỏ. Ở đây ta theo logic ta có thể loại bỏ 2 chữ số 1 hoặc 1 chữ số 2 để thỏa điều kiện dãy còn lại chia hết cho 3. Nhưng bài toán yêu cầu dãy còn lại phải là dãy lớn nhất. Vậy ta dễ dàng nhận thấy dãy số này rơi vào trương hợp 2 vì chữ số 2 là chữ số bé nhất, nhỏ nhất và thỏa điều kiện dãy số còn lại chia hết cho 3. => Loại 2\n",
     "- Sắp xếp dãy số còn lại từ lớn đến bé (giảm dần).\n",
     "\n",
-    "=> Kết quả `8422200` sao tao cứ thấy sai sai thế đéo nào ấy nhờ :( cứu tao Hưng ơi\n",
+    "=> Kết quả `84221100`\n",
     "\n",
     "**2. THUẬT TOÁN:** \n",
     "\n",
@@ -53,7 +53,11 @@
     "\n",
     "B2: Nếu dãy không chia hết cho 3 thì tìm vị trí $a[i]$ và $a[j]$ % $3$ = 1 hoặc 2. Nếu không thấy trả về $-1$. \n",
     "\n",
-    "B3: Xóa vị trí đó, sắp xếp lại dãy giảm dần, in dãy và thoát."
+    "Cú\n",
+    "\n",
+    "B3: Xóa vị trí đó, sắp xếp lại dãy giảm dần, in dãy và thoát.\n",
+    "\n",
+    "Cú again"
    ]
   },
   {
