[ work ] lock&lock completed

--- a/BaiTap5/Lock&Lock.ipynb
+++ b/BaiTap5/Lock&Lock.ipynb
@@ -4,60 +4,219 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## **Đề bài**\n",
+    "\n",
+    "<p style=\"text-align:justify\">Để tăng độ an to&agrave;n chống hiện tượng cướp ng&acirc;n h&agrave;ng ng&agrave;y c&agrave;ng phổ biến người ta d&ugrave;ng kh&oacute;a số với m&atilde; mở kh&oacute;a đơn giản nhưng rất hiệu quả. Tr&ecirc;n cửa ra v&agrave;o hiển thị một x&acirc;u kh&aacute; d&agrave;i c&aacute;c k&yacute; tự số. C&aacute;c chữ số c&oacute; thể di chuyển đổi chổ cho nhau hoặc bị x&oacute;a. Muốn mở kh&oacute;a người ta phải di chuyển c&aacute;c chữ số v&agrave; trong trường hợp cần thiết &ndash; x&oacute;a v&agrave;i chữ số để nhận được <em>x&acirc;u lớn nhất</em> thỏa m&atilde;n điều kiện đ&atilde; c&agrave;i đặt. Điều kiện n&agrave;y được thay đổi thường xuy&ecirc;n. H&ocirc;m nay điều kiện đ&oacute; l&agrave; &ldquo;Số nhận được phải chia hết cho 3&rdquo;. Số nhận được c&oacute; thể bắt đầu bằng c&aacute;c chữ số 0. X&acirc;u &ldquo;000&rdquo; sẽ lớn hơn x&acirc;u &ldquo;00&rdquo;.</p>\n",
+    "\n",
+    "<p style=\"text-align:justify\">H&atilde;y x&aacute;c định kh&oacute;a mở cửa.</p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em><span style=\"color:black\">Dữ liệu:</span></em></strong> V&agrave;o từ thiết bị nhập chuẩn gồm một x&acirc;u k&yacute; tự số c&oacute; độ d&agrave;i lớn hơn 2 v&agrave; kh&ocirc;ng vượt qu&aacute; 10<sup>5</sup>.</p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em><span style=\"color:black\">Kết quả:</span></em></strong> Đưa ra thiết bị xuất chuẩn x&acirc;u kh&oacute;a mở cửa<span style=\"color:black\">.</span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em><span style=\"color:black\">V&iacute; dụ:</span></em></strong></p>\n",
+    "\n",
+    "<table border=\"1\" cellspacing=\"0\">\n",
+    "\t<tbody>\n",
+    "\t\t<tr>\n",
+    "\t\t\t<td style=\"background-color:#ffffcc; width:63.0pt\">\n",
+    "\t\t\t<p style=\"text-align:justify\"><tt><span style=\"color:black\">INPUT</span></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"vertical-align:top; width:58.5pt\">\n",
+    "\t\t\t<p style=\"text-align:justify\">&nbsp;</p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"background-color:#ffffcc; width:67.5pt\">\n",
+    "\t\t\t<p style=\"text-align:justify\"><tt><span style=\"color:black\">OUTPUT</span></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr>\n",
+    "\t\t\t<td style=\"background-color:#ffffcc; width:63.0pt\">\n",
+    "\t\t\t<p style=\"text-align:justify\"><tt><strong><span style=\"color:black\">105</span></strong></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"vertical-align:top; width:58.5pt\">\n",
+    "\t\t\t<p style=\"text-align:justify\">&nbsp;</p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"background-color:#ffffcc; width:67.5pt\">\n",
+    "\t\t\t<p style=\"text-align:justify\"><tt><strong><span style=\"color:black\">510</span></strong></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t</tr>\n",
+    "\t</tbody>\n",
+    "</table>\n",
+    "\n",
+    "<p style=\"text-align:justify\">&nbsp;</p>\n",
+    "\n",
+    "\n",
     "# Tóm tắt\n",
-    "Tìm dãy con lớn nhất và chia hết cho 3.\n",
+    "\n",
+    "Tìm dãy con tạo thành một số *lớn nhất* chia hết cho 3\n",
     "\n",
     "# Nhận dạng \n",
-    "Đây là bài toán chia để trị `Divide and Conquer `. Ta có thể thấy toán gồm 2 bài toán con là tìm dãy chia hết cho 3 và sắp xếp giảm dần dãy đó.\n",
+    "Đây là bài toán *chia để trị* . Ta có thể thấy toán gồm 2 bài toán con là tìm dãy chia hết cho 3 và sắp xếp giảm dần dãy đó.\n",
     "\n",
     "# Thiết kế thuật toán\n",
     "**1. Ý TƯỞNG:**\n",
     "\n",
-    "Để dễ kiểm soát, ta chia dãy số từ 1 đến 9 thành 3 nhóm. Số 0 không có ý nghĩa khi tìm ra dãy chia hết cho 3 nên ta tạm không xét đến.\n",
-    "- Những số chia cho 3 dư 0 = {3, 6, 9}\n",
-    "- Những số chia cho 3 dư 1 = {2, 4, 7}\n",
-    "- Nhưng số chia cho 3 dư 2 = {1, 5, 8}\n",
+    "**_Trường hợp 1:_**  tổng các số trong dãy đều chia hết cho 3.\n",
     "\n",
-    "**_Trường hợp 1:_** tổng các số trong dãy đều chia hết cho 3.\n",
+    "Ví dụ:\n",
     "\n",
-    "Ví dụ ta có dãy số `21080412`\n",
+    "Input:`21080412`\n",
+    "output:`84221100`\n",
+    "\n",
     "- Lần lượt tách và thực hiện cộng các số hạng trong dãy (sum). Ở đây ta có thể tính $ 2+1+0+8+0+4+1+2=18 $ chia hết cho 3. \n",
     "- Sắp xếp dãy số này từ lớn đến bé (giảm dần). \n",
     "\n",
-    "=> Kết quả `84221100`\n",
+    "**_Trường hợp 2:_**  tổng các số trong dãy không chia hết cho 3.\n",
     "\n",
-    "**_Trường hợp 2:_** tổng các số trong dãy không chia hết cho 3.\n",
+    "Ví dụ:\n",
+    "\n",
+    "Input:`210804122`\n",
+    "output:`84221100`\n",
+    "\n",
+    "- Lần lượt tách và thực hiện cộng các số hạng trong dãy (sum). Ở đây ta có thể tính $ 2+1+0+8+0+4+1+2+2=20 $ chia cho 3 dư 2. \n",
+    "- Tìm vị trí của các chữ số và loại bỏ. Ở đây ta theo logic ta có thể loại bỏ 2 chữ số 1 hoặc 1 chữ số 2 để thỏa điều kiện dãy còn lại chia hết cho 3. Nhưng bài toán yêu cầu dãy còn lại phải là dãy lớn nhất. Vậy ta dễ dàng nhận thấy dãy số này rơi vào trương hợp 2 vì chữ số 2 là chữ số bé nhất, nhỏ nhất và thỏa điều kiện dãy số còn lại chia hết cho 3. => Loại 2\n",
+    "- Sắp xếp dãy số còn lại từ lớn đến bé (giảm dần).\n",
     "\n",
     "Đây không phải là dãy số chia hết cho 3, vậy ta cần loại bỏ chữ số sao cho đó là số bé nhất và vẫn thỏa mãn dãy số còn lại chia hết cho 3. Ở đây ta có thể thấy có 2 trường hợp:\n",
     "- Tồn tại 1 chữ số trong dãy số sao cho chữ số đó chia cho 3 dư 1 hoặc dư 2.\n",
     "- Tồn tại 2 chữ số trong dãy số sao cho tổng 2 chữ đó đó chia cho 3 dư 1 hoặc dư 2.\n",
     "\n",
-    "Ở cả 2 trường hợp ta đều phải tìm và loại bỏ các chữ số đó ra khỏi dãy.\n",
     "\n",
-    "Ví dụ ta có dãy số `210804122`\n",
-    "- Lần lượt tách và thực hiện cộng các số hạng trong dãy (sum). Ở đây ta có thể tính $ 2+1+0+8+0+4+1+2+2=20 $ chia cho 3 dư 2. \n",
-    "- Tìm vị trí của các chữ số và loại bỏ. Ở đây ta theo logic ta có thể loại bỏ 2 chữ số 1 hoặc 1 chữ số 2 để thỏa điều kiện dãy còn lại chia hết cho 3. Nhưng bài toán yêu cầu dãy còn lại phải là dãy lớn nhất. Vậy ta dễ dàng nhận thấy dãy số này rơi vào trương hợp 2 vì chữ số 2 là chữ số bé nhất, nhỏ nhất và thỏa điều kiện dãy số còn lại chia hết cho 3. => Loại 2\n",
-    "- Sắp xếp dãy số còn lại từ lớn đến bé (giảm dần).\n",
+    "# Thuật toán:\n",
     "\n",
-    "=> Kết quả `84221100`\n",
+    "1. luồn xử lí\n",
     "\n",
-    "**2. THUẬT TOÁN:** \n",
-    "\n",
-    "B1: Dãy chia hết cho 3 thì sắp xếp dãy giảm dần, in dãy và thoát.\n",
     "```\n",
-    "    initialize a(dãy số)\n",
-    "    if a % 3 == 0:\n",
-    "        a.reverse()\n",
-    "        exit()\n",
+    "B1: kiểm tra dãy số có chia hết cho 3 hay không.\n",
+    "        B1 -> có -> B5\n",
+    "        B1 -> không -> B2\n",
+    "\n",
+    "B2: tìm vị trí a[i] = x. Nếu không thấy trả về -1. \n",
+    "        B2 -> có -> B4\n",
+    "        B2 -> không -> B3\n",
+    "\n",
+    "B3: tìm vị trí a[i] % 3 = x, a[j] % 3 = x. Nếu không thấy trả về -1. \n",
+    "        B3 -> có -> B4\n",
+    "\n",
+    "B4: Xóa vị trí đó -> B5\n",
+    "\n",
+    "B5: sắp xếp lại dãy giảm dần, in dãy và thoát.\n",
     "```\n",
     "\n",
-    "B2: Nếu dãy không chia hết cho 3 thì tìm vị trí $a[i]$ và $a[j]$ % $3$ = 1 hoặc 2. Nếu không thấy trả về $-1$. \n",
+    "2. mã giả:\n",
     "\n",
-    "Cú\n",
+    "```\n",
+    "init input_number\n",
     "\n",
-    "B3: Xóa vị trí đó, sắp xếp lại dãy giảm dần, in dãy và thoát.\n",
+    "if input_number % 3 == 0 then\n",
+    "    output\n",
+    "    exit\n",
+    "    \n",
+    "x <- input_number % 3\n",
+    "input_number_to_string <- str(input_number)\n",
     "\n",
-    "Cú again"
+    "if x in input_number then\n",
+    "    i <- find_index_of_unfit_number(x)\n",
+    "    if i <> -1 then\n",
+    "        delete input_number_to_string[i]\n",
+    "    if i <> -1 then\n",
+    "        index1, index2 = find_two_index_of_unfit_number(x)\n",
+    "        if index1 <> 0 and index2 <> 0 then\n",
+    "            delete input_number_to_string[index1]\n",
+    "            delete input_number_to_string[index2]\n",
+    "```\n",
+    "\n",
+    "# Cài đặt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105\n",
+      "510\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input()\n",
+    "list_a = list(s)\n",
+    "int_s = int(s)\n",
+    "list_a.sort()\n",
+    "\n",
+    "# TH1: Nếu dãy chia hết cho 3 thì sắp xếp dãy giảm gần, in dãy -> thoát\n",
+    "if int_s % 3 == 0:\n",
+    "    list_a.reverse()\n",
+    "    print(''.join(list_a))\n",
+    "    exit()\n",
+    "\n",
+    "x = int(int_s % 3)\n",
+    "\n",
+    "# tìm i trong a sao cho a[i] % 3 = x, nếu không trả về -1\n",
+    "def senario_one(input_string, x):\n",
+    "    ind_result = -1\n",
+    "    if str(x) in input_string:\n",
+    "        ind_result = input_string.index(str(x))\n",
+    "        return ind_result\n",
+    "    \n",
+    "    if str(x + 3) in input_string:\n",
+    "        ind_result = input_string.index(str(x + 3))\n",
+    "        return ind_result\n",
+    "    \n",
+    "    if str(x + 6) in input_string:\n",
+    "        ind_result = input_string.index(str(x + 6))\n",
+    "        return ind_result\n",
+    "\n",
+    "    return ind_result\n",
+    "\n",
+    "# tìm vị trí i, j trong a sao cho a[i] % 3 = x, a[j] % 3 = x, nếu không trả về -1, -1\n",
+    "def senario_two(input_string, x):\n",
+    "    first_index = senario_one(input_string, x)\n",
+    "    second_index = senario_one(input_string[first_index + 1: ], x) + first_index + 1\n",
+    "    return first_index, second_index\n",
+    "\n",
+    "# Tìm và xóa vị trí không thỏa mãn điều kiện, sắp xếp lại dãy giảm dần, in dãy\n",
+    "ind = senario_one(list_a, x)\n",
+    "if ind == -1:\n",
+    "    ind_1, ind_2 = senario_two(list_a, (x*2)%3)\n",
+    "    if ind_1 != -1 and ind_2 != -1:\n",
+    "        list_a.remove(list_a[ind_1])\n",
+    "        list_a.remove(list_a[ind_2 - 1])\n",
+    "\n",
+    "        list_a.reverse()\n",
+    "\n",
+    "        if len(list_a) == 1:\n",
+    "            print(str(list_a[0]))\n",
+    "            exit()\n",
+    "        else:\n",
+    "            print(''.join(list_a))\n",
+    "            exit()\n",
+    "else:\n",
+    "    list_a.remove(list_a[ind])\n",
+    "    list_a.reverse()\n",
+    "    if list_a != []:\n",
+    "        print(''.join(list_a))\n",
+    "        exit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# cải tiến:\n",
+    "\n",
+    "Để dễ kiểm soát, ta nhận thấy các số giới hạn từ từ 1 đến 9 nên ta dễ dàng phân chúng vào thành 3 nhóm.\n",
+    "\n",
+    "- Những số chia cho 3 dư 0 = {3, 6, 9}\n",
+    "- Những số chia cho 3 dư 1 = {1, 4, 7}\n",
+    "- Nhưng số chia cho 3 dư 2 = {2, 5, 8}\n",
+    "\n",
+    "ta đặt giả thuyết ở đây là bằng một cách nào đó ta có thể vận dụng quy tắc này để hard code phần tìm kiếm ở senario_one giúp tăng tốc khả năng chạy của chương trình."
    ]
   },
   {
@@ -84,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
