[ update ] new senarios

--- a/BaiTap5/Lock&Lock.ipynb
+++ b/BaiTap5/Lock&Lock.ipynb
@@ -22,9 +22,6 @@
     "\t\t\t<td style=\"background-color:#ffffcc; width:63.0pt\">\n",
     "\t\t\t<p style=\"text-align:justify\"><tt><span style=\"color:black\">INPUT</span></tt></p>\n",
     "\t\t\t</td>\n",
-    "\t\t\t<td style=\"vertical-align:top; width:58.5pt\">\n",
-    "\t\t\t<p style=\"text-align:justify\">&nbsp;</p>\n",
-    "\t\t\t</td>\n",
     "\t\t\t<td style=\"background-color:#ffffcc; width:67.5pt\">\n",
     "\t\t\t<p style=\"text-align:justify\"><tt><span style=\"color:black\">OUTPUT</span></tt></p>\n",
     "\t\t\t</td>\n",
@@ -32,9 +29,6 @@
     "\t\t<tr>\n",
     "\t\t\t<td style=\"background-color:#ffffcc; width:63.0pt\">\n",
     "\t\t\t<p style=\"text-align:justify\"><tt><strong><span style=\"color:black\">105</span></strong></tt></p>\n",
-    "\t\t\t</td>\n",
-    "\t\t\t<td style=\"vertical-align:top; width:58.5pt\">\n",
-    "\t\t\t<p style=\"text-align:justify\">&nbsp;</p>\n",
     "\t\t\t</td>\n",
     "\t\t\t<td style=\"background-color:#ffffcc; width:67.5pt\">\n",
     "\t\t\t<p style=\"text-align:justify\"><tt><strong><span style=\"color:black\">510</span></strong></tt></p>\n",
@@ -73,18 +67,29 @@
     "Input:`210804122`\n",
     "output:`84221100`\n",
     "\n",
-    "- Lần lượt tách và thực hiện cộng các số hạng trong dãy (sum). Ở đây ta có thể tính $ 2+1+0+8+0+4+1+2+2=20 $ chia cho 3 dư 2. \n",
-    "- Tìm vị trí của các chữ số và loại bỏ. Ở đây ta theo logic ta có thể loại bỏ 2 chữ số 1 hoặc 1 chữ số 2 để thỏa điều kiện dãy còn lại chia hết cho 3. Nhưng bài toán yêu cầu dãy còn lại phải là dãy lớn nhất. Vậy ta dễ dàng nhận thấy dãy số này rơi vào trương hợp 2 vì chữ số 2 là chữ số bé nhất, nhỏ nhất và thỏa điều kiện dãy số còn lại chia hết cho 3. => Loại 2\n",
+    "- Lần lượt tách và thực hiện cộng các số hạng trong dãy. Ở đây ta có thể tính $ 2+1+0+8+0+4+1+2+2=20 $ chia cho 3 dư 2.\n",
+    "- do x là 2 và 2 là phần tử trong dãy => Loại 2.\n",
     "- Sắp xếp dãy số còn lại từ lớn đến bé (giảm dần).\n",
     "\n",
-    "Đây không phải là dãy số chia hết cho 3, vậy ta cần loại bỏ chữ số sao cho đó là số bé nhất và vẫn thỏa mãn dãy số còn lại chia hết cho 3. Ở đây ta có thể thấy có 2 trường hợp:\n",
-    "- Tồn tại 1 chữ số trong dãy số sao cho chữ số đó chia cho 3 dư 1 hoặc dư 2.\n",
-    "- Tồn tại 2 chữ số trong dãy số sao cho tổng 2 chữ đó đó chia cho 3 dư 1 hoặc dư 2.\n",
+    "\n",
+    "**_Trường hợp 3:_**  tổng các số trong dãy không chia hết cho $ 3 $ và số dư $ x $ không tồn tại trong dãy.\n",
+    "\n",
+    "Input:`39226`\n",
+    "Output: `9630`\n",
+    "\n",
+    "Input: `631649`\n",
+    "Output: `9663`\n",
+    "\n",
+    "Trong ví dụ 1: 39226 % 3 = 1, Output đã bỏ đi 2 số 2\n",
+    "\n",
+    "Trong ví dụ 2: 631649 % 3 = 2, Output đã bỏ đi 1 và 4\n",
+    "\n",
+    "- Ta nhận thấy 4 % 3 = 1, 5 % 3 = 2. Tổng 2 chữ số % 3 = 1 sẽ là 1 số % 3 = 2, và ngược lại.\n",
     "\n",
     "\n",
     "# Thuật toán:\n",
     "\n",
-    "1. luồn xử lí\n",
+    "* luồn xử lí\n",
     "\n",
     "```\n",
     "B1: kiểm tra dãy số có chia hết cho 3 hay không.\n",
@@ -103,7 +108,7 @@
     "B5: sắp xếp lại dãy giảm dần, in dãy và thoát.\n",
     "```\n",
     "\n",
-    "2. mã giả:\n",
+    "* mã giả:\n",
     "\n",
     "```\n",
     "init input_number\n",
@@ -138,8 +143,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "105\n",
-      "510\n"
+      "631649\n",
+      "9664\n",
+      "966\n"
      ]
     }
    ],
@@ -196,12 +202,12 @@
     "        else:\n",
     "            print(''.join(list_a))\n",
     "            exit()\n",
-    "else:\n",
-    "    list_a.remove(list_a[ind])\n",
-    "    list_a.reverse()\n",
-    "    if list_a != []:\n",
-    "        print(''.join(list_a))\n",
-    "        exit()"
+    "\n",
+    "list_a.remove(list_a[ind])\n",
+    "list_a.reverse()\n",
+    "if list_a != []:\n",
+    "    print(''.join(list_a))\n",
+    "    exit()"
    ]
   },
   {
