--- a/BaiTap5/Lock&Lock.ipynb
+++ b/BaiTap5/Lock&Lock.ipynb
@@ -45,7 +45,7 @@
     "Tìm dãy con tạo thành một số *lớn nhất* chia hết cho 3\n",
     "\n",
     "# Nhận dạng \n",
-    "Đây là bài toán *chia để trị* . Ta có thể thấy toán gồm 2 bài toán con là tìm dãy chia hết cho 3 và sắp xếp giảm dần dãy đó.\n",
+    "Ta có thể thấy toán gồm 2 bài toán con là tìm dãy chia hết cho 3 và sắp xếp giảm dần dãy đó.\n",
     "\n",
     "# Thiết kế thuật toán\n",
     "**1. Ý TƯỞNG:**\n",
@@ -54,8 +54,7 @@
     "\n",
     "Ví dụ:\n",
     "\n",
-    "Input:`21080412`\n",
-    "output:`84221100`\n",
+    "Input:`21080412` => Output:`84221100`\n",
     "\n",
     "- Lần lượt tách và thực hiện cộng các số hạng trong dãy (sum). Ở đây ta có thể tính $ 2+1+0+8+0+4+1+2=18 $ chia hết cho 3. \n",
     "- Sắp xếp dãy số này từ lớn đến bé (giảm dần). \n",
@@ -64,11 +63,10 @@
     "\n",
     "Ví dụ:\n",
     "\n",
-    "Input:`210804122`\n",
-    "output:`84221100`\n",
+    "Input:`210804122` => Output:`84221100`\n",
     "\n",
     "- Lần lượt tách và thực hiện cộng các số hạng trong dãy. Ở đây ta có thể tính $ 2+1+0+8+0+4+1+2+2=20 $ chia cho 3 dư 2.\n",
-    "- do x là 2 và 2 là phần tử trong dãy => Loại 2.\n",
+    "- Tìm vị trí a[i] = $x$ trong dãy số. Do $x$ = 2 và 2 là phần tử có trong dãy => Loại 2.\n",
     "- Sắp xếp dãy số còn lại từ lớn đến bé (giảm dần).\n",
     "\n",
     "\n",
@@ -87,9 +85,9 @@
     "- Ta nhận thấy 4 % 3 = 1, 5 % 3 = 2. Tổng 2 chữ số % 3 = 1 sẽ là 1 số % 3 = 2, và ngược lại.\n",
     "\n",
     "\n",
-    "# Thuật toán:\n",
+    "**2. THUẬT TOÁN:**\n",
     "\n",
-    "* luồn xử lí\n",
+    "* a. Luồng xử lí\n",
     "\n",
     "```\n",
     "B1: kiểm tra dãy số có chia hết cho 3 hay không.\n",
@@ -108,7 +106,7 @@
     "B5: sắp xếp lại dãy giảm dần, in dãy và thoát.\n",
     "```\n",
     "\n",
-    "* mã giả:\n",
+    "* b. Pseudo code\n",
     "\n",
     "```\n",
     "init input_number\n",
@@ -214,15 +212,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# cải tiến:\n",
+    "# Cải tiến\n",
     "\n",
-    "Để dễ kiểm soát, ta nhận thấy các số giới hạn từ từ 1 đến 9 nên ta dễ dàng phân chúng vào thành 3 nhóm.\n",
+    "Để dễ kiểm soát, ta nhận thấy các số giới hạn từ 1 đến 9 nên ta dễ dàng phân chúng vào thành 3 nhóm. \n",
     "\n",
     "- Những số chia cho 3 dư 0 = {3, 6, 9}\n",
     "- Những số chia cho 3 dư 1 = {1, 4, 7}\n",
     "- Nhưng số chia cho 3 dư 2 = {2, 5, 8}\n",
     "\n",
-    "ta đặt giả thuyết ở đây là bằng một cách nào đó ta có thể vận dụng quy tắc này để hard code phần tìm kiếm ở senario_one giúp tăng tốc khả năng chạy của chương trình."
+    "Số 0 không có ý nghĩa trong việc tính tổng(sum) của dãy số. Vì thế ta tạm thời không dùng đến số 0.\n",
+    "\n",
+    "Ta đặt giả thuyết ở đây là bằng một cách nào đó ta có thể vận dụng quy tắc này để hard code phần tìm kiếm ở senario_one giúp tăng tốc khả năng chạy của chương trình."
    ]
   },
   {
@@ -249,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
