--- a/Week 1/BOT.ipynb
+++ b/Week 1/BOT.ipynb
@@ -4,19 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#`Tóm tắt`\n",
+    "# Tóm tắt\n",
     "\n",
-    "* Tìm dãy con liên tiếp có tổng lớn nhất\n",
+    "Tìm dãy con liên tiếp có tổng lớn nhất\n",
     "\n",
-    "#`Nhận dạng`\n",
+    "# Nhận dạng\n",
+    "Bài toán này có thể sử dụng một số phương pháp như sau:\n",
+    "- Phương án 1: Phương pháp vét cạn `Brute Force` nếu không yêu cần thời gian xử lí.\n",
+    "- Phương án 2: Phương pháp quy hoạch động `Dynamic Programming` để tối ưu về thời gian.\n",
     "\n",
-    "* quy hoạch động\n",
+    "# Thiết kế thuật toán \n",
+    "**1. Ý TƯỞNG:**\n",
     "\n",
-    "#`Thiết kế thuật toán`\n",
+    "Về phương pháp quy hoạch động, ta sử dụng một biến tạm để lưu trữ tổng giá trị đến thời điểm hiện tại. Ta thấy có 3 trường hợp xảy ra: \n",
+    "- Nếu biến tạm lớn hơn biến kết quả thì cập nhật kết quả = biến tạm \n",
+    "- Nếu biến tạm bé hơn biến kết và không bé hơn không, ta vẫn cộng giá trị của mảng và duyệt tiếp \n",
+    "- Nếu biến tạm bé hơn 0, lúc này đoạn con cập nhật tới thời điểm hiện tại không còn ý nghĩa nữa vì nếu\n",
+    "- Cộng tiếp tục giá trị tiếp theo, nếu là số dương thì dương + âm vẫn bé hơn số dương đó, nếu là số âm thì đoạn càng giảm..\n",
+    "    \n",
+    "**2. Thuật toán:**\n",
     "\n",
-    "* input: một dãy n các số có âm có dương (1 <= n <= 10^6)\n",
-    "* output: tìm dãy con có tổng lớn nhất\n",
-    "\n",
+    "**_Pseudo code:_**\n",
     "```\n",
     "res_data = {\n",
     "    'from': 1,\n",
@@ -37,8 +45,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cài đặt\n",
+    "**1. Input:**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +73,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. Phương án 1:**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,21 +118,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#PHƯƠNG ÁN 2:\n",
+    "**2. Phương án 2:**\n",
     "\n",
-    "nguồn tham khảo: https://www.geeksforgeeks.org/largest-sum-contiguous-subarray/"
+    "Nguồn tham khảo: https://www.geeksforgeeks.org/largest-sum-contiguous-subarray/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'from': 5, 'to': 14, 'sum': 12}\n"
+      "{'from': 5, 'to': 15, 'sum': 12}\n"
      ]
     }
    ],
@@ -164,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
